[project]
name = "cloak-browse"
version = "0.2.0"
description = "Stealth browser CLI — CloakBrowser + browser-harness wired together"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Vincent Hopf" }]
keywords = ["stealth", "browser", "automation", "anti-detect", "cdp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "cloakbrowser>=0.3.20",
    "patchright",
    "browser-harness @ git+https://github.com/browser-use/browser-harness.git",
]

[project.urls]
Homepage = "https://github.com/vincenthopf/cloak-browse"
Repository = "https://github.com/vincenthopf/cloak-browse"
Issues = "https://github.com/vincenthopf/cloak-browse/issues"

[project.scripts]
cloak-browse = "cloak_browse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cloak_browse"]
